[project]
name = "adsorbate_simulation"
version = "0.0.1"
description = "A Framework for Automatic Basis Transformations"
authors = [{ "name" = "Matthew Ord", "email" = "matthew.ord1@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "numpy >=2.0.0,<3.0.0",
    "scipy >=1.14.1,<2.0.0",
    "slate @ git+https://github.com/Matt-Ord/slate.git@6ce9040",
    "slate_quantum[sse_solver_py] @ git+https://github.com/Matt-Ord/slate_quantum.git@aafa0fc1de1812a173f4796c92b5515b8868b0f4",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest >=8.3.3,<9.0.0",
    "pyright ==1.1.392",
    "sphinx >=8.1.3,<9.0.0",
    "pydata-sphinx-theme >=0.16.0,<0.17.0",
]

[project.optional-dependencies]
plot = ["slate_quantum[plot]"]


[tool.ruff]
unsafe-fixes = true
exclude = [".git", ".git-rewrite", ".vscode"]


[tool.ruff.lint]
select = ["ALL"]
preview = true
ignore = [
    "COM812",
    "E501",
    "S101",
    "PT009",
    "D100",
    "D105",
    "CPY001",
    "TD003",
    "TD002",
    "DOC201",
    "DOC402",
    "PD",
]


[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*" = ["PLR6301", "PLC2701", "PLR0914", "D101", "D102", "D103", "D104"]
"examples/**/*" = ["INP001"]
"docs/**/*" = ["INP001", "I002"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
typeCheckingMode = "strict"
include = ["tests", "adsorbate_simulation", "examples"]
reportImplicitOverride = true

# [tool.uv]
# override-dependencies = [
#     "sse_solver_py @ git+https://github.com/Matt-Ord/sse_solver.git@3193c492fb25610209c1c7d7692d78e348a0ce54#subdirectory=sse_solver_py",
# ]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
